# git2-diff-memory

./: Cargo.toml  flake.nix
src/: main.rs
