[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tempfile = "3.17.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.git2]
version = "0.20.0"
default-features = false
features = ["vendored-libgit2"]

